CASMUAS-196: Add broker requirements
* Adopt the namespace 'uas' for brokers and include a sidecar definition
* Add requests/limits for the 'uas' namespace
* Add 'uai_compute_network' to toggle needing macvlan in UAIs
